--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.css"
     />
   </head>
   <body>
@@ -17,7 +17,7 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.js"></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
